rns-lang/test_data/integration/error/lexer/strings/unknown_escape_sequence.rns
.class public Test
.code "\u"
